exports[`test renders ActivityIndicator 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FAF6F1",
        "borderBottomWidth": 0.5,
        "borderColor": "#CECED2",
        "opacity": 1,
        "padding": 10,
      }
    }
    testID={undefined}>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail" />
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              Array [
                Object {
                  "fontSize": 13.5,
                },
                Object {
                  "color": "#CECED2",
                  "marginTop": 4,
                },
              ],
            ]
          }>
          Há segundos
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FAF6F1",
        "borderBottomWidth": 0.5,
        "borderColor": "#CECED2",
        "opacity": 1,
        "padding": 10,
      }
    }
    testID={undefined}>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail" />
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              Array [
                Object {
                  "fontSize": 13.5,
                },
                Object {
                  "color": "#CECED2",
                  "marginTop": 4,
                },
              ],
            ]
          }>
          Há segundos
        </Text>
      </View>
    </View>
  </View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "marginTop": 10,
      }
    } />
</View>
`;

exports[`test renders correctly 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FAF6F1",
        "borderBottomWidth": 0.5,
        "borderColor": "#CECED2",
        "opacity": 1,
        "padding": 10,
      }
    }
    testID={undefined}>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail" />
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              Array [
                Object {
                  "fontSize": 13.5,
                },
                Object {
                  "color": "#CECED2",
                  "marginTop": 4,
                },
              ],
            ]
          }>
          Há segundos
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FAF6F1",
        "borderBottomWidth": 0.5,
        "borderColor": "#CECED2",
        "opacity": 1,
        "padding": 10,
      }
    }
    testID={undefined}>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail" />
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              Array [
                Object {
                  "fontSize": 13.5,
                },
                Object {
                  "color": "#CECED2",
                  "marginTop": 4,
                },
              ],
            ]
          }>
          Há segundos
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders load more button 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FAF6F1",
        "borderBottomWidth": 0.5,
        "borderColor": "#CECED2",
        "opacity": 1,
        "padding": 10,
      }
    }
    testID={undefined}>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail" />
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              Array [
                Object {
                  "fontSize": 13.5,
                },
                Object {
                  "color": "#CECED2",
                  "marginTop": 4,
                },
              ],
            ]
          }>
          Há segundos
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#FAF6F1",
        "borderBottomWidth": 0.5,
        "borderColor": "#CECED2",
        "opacity": 1,
        "padding": 10,
      }
    }
    testID={undefined}>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail" />
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#654C50",
                "fontFamily": "Avenir",
                "fontSize": 18,
              },
              Array [
                Object {
                  "fontSize": 13.5,
                },
                Object {
                  "color": "#CECED2",
                  "marginTop": 4,
                },
              ],
            ]
          }>
          Há segundos
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#654C50",
            },
            Array [
              Object {
                "marginBottom": 20,
                "marginTop": 10,
                "textAlign": "center",
              },
              undefined,
            ],
          ],
        ]
      }>
      Carregar mais
    </Text>
  </View>
</View>
`;
